--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,3 +1,31 @@
-Footer {
-    display: none;
+footer{
+    background-color: var(--lightgrey);
+    height: 237px;
+    padding: 4rem 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.copyright{
+    color: var(--darkgrey);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerLinks{
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerLinks ul{
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    gap: 1rem;
+    list-style-type: none;
 }
