--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,70 @@
 .landing{
     height: calc(100vh - var(--header-height));
+    border-top: 0.5rem solid var(--black);
+    display: flex;
+    padding: 6rem 2rem;
+    align-items: center;
+    justify-content: center;
 }
 
-.landing .text{
-    
+.content{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.text{
+    width: 50%;
+    padding: 1rem;
+}
+
+@media screen and (min-width: 769px) {
+    .image{
+        padding: 1rem;
+        max-width: 50%;
+    }
+}
+.image img{
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .landing{
+        padding: 6rem 3.5rem;
+        width: 100%;
+    }
+
+    .content{
+        flex-direction: column;
+        padding: 1rem;
+        width: 100%;
+    }
+
+    .image{
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+
+    .text{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.cta {
+    margin: 0 1rem 1rem 0;
+    padding: 0.75rem 1.5rem;
+    background-color: var(--darkblue);
+    color: var(--white);
+    border-radius: 0.25rem;
+    border: none;
+    font-size: 1rem;
+    text-decoration: none;
 }
